# chart-binder

./: .copier-answers.yml  .env.example  .gitignore  AGENTS.md  AGENTS_UPDATE_PR.md  BATCH_ADJUDICATION_DESIGN.md  CLAUDE.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  EDGE_CASE_INFRASTRUCTURE.md  EPIC3.5_PR.md  EPIC4_PR.md  EPIC5_PR.md  EPIC6_PR.md  Makefile  README.md  config.example.toml  decisions.sqlite  development.md  llm trace file  pyproject.toml  test_filtering_debug.py
.claude/: AGENTS.md
.claude/agents/: architect-reviewer.md  cli-developer.md  code-reviewer.md  llm-architect.md  prompt-engineer.md  python-pro.md  qa-expert.md
.cursor/rules/: commits.mdc
devtools/: lint.py
docs/: api-reference.md  beets-plugin.md  cli-reference.md  configuration.md  database-schema.md  quickstart.md  roadmap.md  spec.md
docs/appendix/: application_spec_v1.md  beets_plugin_protocol_spec_v1.md  canonicalization_rule_table_v1.md  charts_etl_test_pack_v1.md  charts_field_schema_v1.md  db_schema_sketch_v1.md  drift-contract.md  normalization.md  normalization_qa_pack_v1.md  tag-writer.md  truth_table_v1.md
docs/spec/: db-backend.md  llm-refactor-plan.md  overview.md  react-pattern.md
src/beetsplug/: __init__.py  chart_binder.py
src/chart_binder/: __init__.py  acoustid.py  analytics.py  batch.py  candidates.py  chart_binder.py  charts_db.py  charts_export.py  cli.py  cli_typer.py  config.py  console.py  decisions_db.py  discogs.py  drift.py  fetcher.py  fingerprint.py  http_cache.py  musicbrainz.py  musicgraph.py  normalize.py  playlist.py  rate_limiter.py  resolve.py  resolver.py  safe_logging.py  search.py  sibling.py  spotify.py  tagging.py  wikidata.py
src/chart_binder/backends/: __init__.py  api_backend.py  base.py  db_backend.py  factory.py
src/chart_binder/llm/: __init__.py  adjudicator.py  agent_adjudicator.py  batch.py  langchain_callbacks.py  langchain_provider.py  llm_logger.py  providers.py  react_adjudicator.py  review_queue.py  search_tool.py  searxng.py  structured_output.py  tools.py
src/chart_binder/scrapers/: __init__.py  base.py  kerstlijst.py  top2000.py  top40.py  top40_jaar.py  wikipedia_parser.py  zwaarste.py
tests/: EDGE_CASE_QUICKSTART.md  conftest.py  edge_case_helpers.py  example_edge_case_usage.py  prefetch_check.py  test_analytics.py  test_beetsplug_chart_binder.py  test_candidates.py  test_candidates_fixtures.py  test_config_precedence.py  test_coverage_commands.py  test_e2e_workflows.py  test_normalization_qa_pack.py  test_playlist.py  test_property_based.py  test_resolver.py  test_scraper_edge_cases.py  test_scraper_kerstlijst.py  test_scraper_top2000.py  test_scraper_top40.py  test_scraper_top40_jaar.py  test_scraper_zwaarste.py  test_tagging.py
tests/fixtures/: README_EDGE_CASES.md  scraper_edge_cases.json
tests/fixtures/cassettes/kerstlijst/: sample.json
tests/fixtures/cassettes/top2000/: 2024.json
tests/fixtures/cassettes/top40/: 2024-W01.html
tests/fixtures/cassettes/top40_jaar/: 2023.html
tests/fixtures/cassettes/zwaarste/: 2009-table.html  2010-table.html  2024.html
